Chk 1527 ecommerce view (#14)
* fix(openapi): update openapi with latest modifications

* fix(openapi): update sample code

* fix(openapi): refactoring searching criteria

* fix: statusDetail -> statusDetails

* feat: add exception handling logic

* fix: add junit tests

* fix: add junit tests for coverage

* fix: refactoring

* chore(build): integrate ecommerce commons library

* chore(build): make commons build skipped by default for local build

* fix: restore gradle build

* feat: add query by user email implementation

* feat: query pagination

* feat: query pagination

* feat(PM): search transaction by email

* feat(PM): search transaction by email

* feat(query): create common interface for search

* fix: rebase

* temp

* fix: code smells

* feat: code refactoring

* fix: add junit tests

* fix: type mapping

* feat: add search by user fiscal code

* fix: add tests for coverage

* feat: add search onto ecommerce database

* feat: add search onto ecommerce database

* fix: add nodo openapi code geneartion + minor changes

* Update src/main/kotlin/it/pagopa/ecommerce/helpdesk/services/PmService.kt


* fix(code-review): remove dynamic search type scan

* fix(code-review): refactoring searchCriteria arg

* fix: upgrade commons version

* fix: rename field searchCriteria -> searchParams

* fix: rename field searchCriteria -> searchParams

* fix: use bind parameters

* fix: map invalid search criteria to mono error

* fix: merge suggestion from dependent PR

* fix: merge suggestion from dependent PR

* temp

* temp

* fix(openapi): make payment detail info a list

* fix(openapi): add user info as required into response

* fix: update openapi specifications

* fix: add event status

* Update api-spec/openapi.yaml


* fix: indentation

* fix: refactoring

* merge openapi fix branch

* fix: implement search for ecommerce mongo db

* fix: add junit tests for coverage
