# api-spec/openapi.yaml
@@ -37,6 +37,7 @@ paths:
           name: pageSize
           schema:
             type: integer
+            minimum: 1
             default: 10
           required: true
           description: "Max element per page"
@@ -86,13 +87,14 @@ paths:
           name: pageSize
           schema:
             type: integer
+            minimum: 1
             default: 10
           required: true
           description: "Max element per page"
       tags:
         - eCommerce
       operationId: ecommerceSearchTransaction
-      summary: Search transaction by input parmeters
+      summary: Search transaction by input parameters
       description: 'GET with body payload - no resources created'
       requestBody:
         $ref: "#/components/requestBodies/EcommerceSearchTransactionRequest"
@@ -135,13 +137,14 @@ paths:
           name: pageSize
           schema:
             type: integer
+            minimum: 1
             default: 10
           required: true
           description: "Max element per page"
       tags:
         - helpDesk
       operationId: helpDeskSearchTransaction
-      summary: Search transaction by input parmeters
+      summary: Search transaction by input parameters
       description: 'GET with body payload - no resources created'
       requestBody:
         $ref: "#/components/requestBodies/SearchTransactionRequest"
@@ -325,7 +328,7 @@ components:
         - product
     UserInfo:
       type: object
-      description: User informations
+      description: User information
       properties:
         userFiscalCode:
           type: string
@@ -375,7 +378,7 @@ components:
           $ref: '#/components/schemas/AmountEuroCents'
         rrn:
           type: string
-        authotizationCode:
+        authorizationCode:
           type: string
         paymentMethodName:
           type: string
@@ -450,7 +453,7 @@ components:
       minimum: 0
       maximum: 99999999
     PageInfo:
-      description: Informations about the returned query page
+      description: Information about the returned query page
       type: object
       properties:
         current:
